# led_strip_hmi

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
led_strip_hmi_common/: .gitignore  README.md  package.xml  setup.cfg  setup.py
led_strip_hmi_common/led_strip_hmi_common/: config.py  config_utils.py  tf_utils.py  virtual_strip.py
led_strip_hmi_msgs/: .gitignore  CMakeLists.txt  README.md  package.xml
led_strip_hmi_msgs/msg/: LEDStrip.msg  LEDStripConfig.msg  LEDStripEffect.msg  LEDStripPhysicalConfig.msg  LEDStripPhysicalConfigArray.msg  LEDStripPhysicalSegment.msg  LEDStripProjectionInfo.msg  LEDStripProjectionInfoArray.msg  VirtualLEDStripSegment.msg  VirtualPerceptionConfig.msg
led_strip_hmi_projector/: .gitignore  README.md  package.xml  setup.cfg  setup.py
led_strip_hmi_projector/launch/: projector.launch.py
led_strip_hmi_projector/led_strip_hmi_projector/: adapters.py  drawing.py  projector.py  projector_node.py
led_strip_hmi_visualization/: README.md  package.xml  setup.cfg  setup.py
led_strip_hmi_visualization/launch/: strip_visualizer.launch.py
led_strip_hmi_visualization/led_strip_hmi_visualization/: geometry_utils.py  marker_builders.py  marker_utils.py  strip_visualizer.py
