<?xml version="1.0"?>
<package format="3">
  <name>led_strip_hmi_msgs</name>
  <version>0.1.0</version>

  <description>
    Custom ROS 2 message definitions for configuring virtual LED strips,
    projecting detection results onto strips, and defining visual effects.
  </description>
  <maintainer email="marco.wallner@ait.ac.at">Marco Wallner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
